--- a/code/MoodSync/app/src/main/res/values/strings.xml
+++ b/code/MoodSync/app/src/main/res/values/strings.xml
@@ -62,5 +62,15 @@
     <string name="cancel">
         Cancel
     </string>
+    <string-array name="spinner_items">
+        <item>Happy</item>
+        <item>Sad</item>
+        <item>Angry</item>
+        <item>Confused</item>
+        <item>Surprised</item>
+        <item>Ashamed</item>
+        <item>Disgusted</item>
+        <item>Scared</item>
+    </string-array>
 
 </resources>
