yooo yoo hunny singh

--- a/code/MoodSync/app/src/main/res/values/strings.xml
+++ b/code/MoodSync/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
         Cancel
     </string>
     <string name="some_id">
-        hey
+        Next
     </string>
     <string-array name="spinner_items">
         <item>Happy</item>
