--- a/code/MoodSync/app/src/main/res/values/strings.xml
+++ b/code/MoodSync/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     </string>
     <string name="enter_your_description_here">Enter your description here</string>
     <string name="add_from_photos">Add from Photos</string>
-    <string name="up_to_12mb">Up to 12MB</string>
+    <string name="up_to_12mb"> </string>
     <string-array name="spinner_items">
         <item>None</item>
         <item>Happy</item>
