BASIC MAP IMPLEMENTATION

--- a/code/MoodSync/app/src/main/res/values/strings.xml
+++ b/code/MoodSync/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
         <item>Disgusted</item>
         <item>Scared</item>
     </string-array>
+    <string name="title_activity_maps">MapsActivity</string>
 
 
 </resources>
