--- a/code/MoodSync/app/src/main/res/values/strings.xml
+++ b/code/MoodSync/app/src/main/res/values/strings.xml
@@ -79,6 +79,17 @@
         <item>Disgusted</item>
         <item>Scared</item>
     </string-array>
+    <string-array name="music_options">
+        <item>None</item>
+        <item>Happy</item>
+        <item>Sad</item>
+        <item>Angry</item>
+        <item>Confused</item>
+        <item>Surprised</item>
+        <item>Ashamed</item>
+        <item>Disgusted</item>
+        <item>Scared</item>
+    </string-array>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="now_playing">Now playing: %1$s by %2$s</string>
 
